--- a/src/stylesheets/parkingdetail.scss
+++ b/src/stylesheets/parkingdetail.scss
@@ -132,21 +132,21 @@ clear: both;
 
 .productbutton
 {
-display: block;
-color: #fff;
-border-radius: 4px;
-padding: 5px;
-margin: auto;
-margin-bottom: 10px;
-text-decoration: none;
-border-radius:3px;
-text-align: center;
-cursor: pointer;
+  display: block;
+  color: #fff;
+  border-radius: 4px;
+  padding: 5px;
+  margin: auto;
+  margin-bottom: 10px;
+  text-decoration: none;
+  border-radius:3px;
+  text-align: center;
+  cursor: pointer;
 }
 
 .productbutton a:hover
 {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .reserve{
@@ -173,13 +173,20 @@ text-decoration: none;
   border: 1px solid #22697F;
 }
 
+.reviewsection textarea{
+  border-radius: 5px;
+  width: 100%;
+  border-radius: 5px;
+  height: 70px;
+}
+
 .right{
   float: right;
 }
 
-.left{
-  float: left;
-}
+// .left{
+//   float: left;
+// }
 
 .imageList { list-style: none; margin: 5px 0px 2px 0px; padding: 0; }
 .imageList li { display: inline; padding: 0; margin: 0 2px;  }
@@ -412,3 +419,49 @@ border: 1px solid #22697F;
   background: #184A5A;
   border: 1px solid #184A5A;
 }
+
+
+
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+fieldset, label { margin: 0; padding: 0; }
+body{ margin: 20px; }
+h1 { font-size: 1.5em; margin: 10px; }
+
+/****** Style Star Rating Widget *****/
+
+.rating { 
+  border: none;
+  float: left;
+}
+
+.rating > input { display: none; } 
+.rating > label:before { 
+  margin: 5px;
+  font-size: 1.25em;
+  font-family: FontAwesome;
+  display: inline-block;
+  content: "\f005";
+}
+
+.rating > .half:before { 
+  content: "\f089";
+  position: absolute;
+}
+
+.rating > label { 
+  color: #ddd; 
+ float: right; 
+}
+
+/***** CSS Magic to Highlight Stars on Hover *****/
+
+.rating > input:checked ~ label, /* show gold star when clicked */
+.rating:not(:checked) > label:hover, /* hover current star */
+.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+.rating > input:checked + label:hover, /* hover current star when changing rating */
+.rating > input:checked ~ label:hover,
+.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.rating > input:checked ~ label:hover ~ label { color: #FFED85;  } 
